{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Abilities",
            "id": "7f09fec7-22e4-47e7-a89a-6ebd0c450d86",
            "actions": [
                {
                    "name": "ChangeTypeYin",
                    "type": "Button",
                    "id": "54b81d76-c64b-4e4c-b664-55e1a581f0e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeTypeYang",
                    "type": "Button",
                    "id": "5f837f0a-7403-4b7c-ad2c-4d0176ef1883",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttractionRepution",
                    "type": "Button",
                    "id": "5e560d73-de30-4a8e-880a-6f8f65a8b05f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpiritForm",
                    "type": "Button",
                    "id": "80ca343f-33c7-477a-988c-0aed23bcc356",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "10100f95-28f0-45a7-9820-acdc21a37ee7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4944dab5-7f73-4adc-a8ac-a2bd54203a0a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeTypeYin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47001f5d-08d0-41e3-8884-5964c2117826",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeTypeYang",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd98318d-d81d-40b0-8c1b-c6e5a885817b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttractionRepution",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40244fe9-56d8-4327-8e47-db94a8ac8c0a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpiritForm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56a98be0-6d45-4c63-a9d5-ea6f5f13011a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Terrain",
            "id": "b07120b8-5841-4547-90a6-7c403ca04103",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "5144dc2e-8a4e-4471-ba57-9eeeb4d5d7f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e5c88a95-3b90-41ff-9a8b-35e3c6ba3d00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "16ce5b1f-253d-4adc-a1ce-89e3573b8a8f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d32c66c2-8c86-4c36-a794-dedc5638bad1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "abcf5305-f772-4e40-9051-d3262bf841d2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "59102c20-17d2-4260-b672-3226193f2790",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Air",
            "id": "b7a0126d-3db3-4716-844b-92d24cc4121f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "0c18dd6b-2c1c-499f-9f06-c94a54122b9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "8ad56b6a-16c2-419d-9e94-88e7a1a36596",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "764090d6-871d-4d71-8565-e3cac6bc8da7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "98a5ab8a-0180-4169-a9dd-2b4fbe969637",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7f3dd9d8-ba7a-4d97-a822-57370f146912",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ece52cc9-4b9f-4246-abc1-c771e31ff873",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}